--- a/.env
+++ b/.env
@@ -3,13 +3,9 @@ SERVER_PORT=3000
 SERVER_HOST=0.0.0.0
 ENVIRONMENT=development
 
-# Database configuration
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=qr_platform
-DB_USER=postgres
-DB_PASSWORD=
-DB_SSL_MODE=disable
+# Database configuration (SQLite)
+DB_TYPE=sqlite
+DB_PATH=./data/qr_platform.db
 
 # JWT configuration
 JWT_SECRET=your_jwt_secret_here
